Minor language adjustments

--- a/report/contents/background.tex
+++ b/report/contents/background.tex
@@ -249,7 +249,7 @@ Another improvement with respect to \acrshort{trpo} is the use of simple first-o
 
 \acrfull{ddpg} is an off-policy actor-critic algorithm that was introduced by Lillicrap et al. (2015) \cite{Lillicrap2015}. The algorithm arises to solve the challenges of applying \acrlong{dqn} \cite{Mnih2013} to continuous action spaces by applying \acrfull{dpg}, which enables the efficient computation of the policy gradient without the need to integrate over the action space. 
 
-The algorithm uses the following networks: the actor network $\mu(s_t; \theta_\mu)$, which learns a deterministic policy; the critic network $Q(s_t, a_t; \theta_Q)$, which learns the state-action value function; and the actor's and critic's target networks. The actor network is updated using \acrshort{dpg}: 
+The algorithm uses the following networks: the actor network $\mu(s_t; \theta_\mu)$, which learns a deterministic policy, the critic network $Q(s_t, a_t; \theta_Q)$, which learns the state-action value function, and the actor's and critic's target networks. The actor network is updated using \acrshort{dpg}: 
 \begin{equation}
     \nabla_{\theta_\mu} J \approx \mathbb{E}_{s_t \sim \mathcal{D}} \left[\nabla_a Q(s_t, a_t; \theta_Q) \nabla_{\theta_\mu} \mu(s_t; \theta_\mu)\right],
 \end{equation}
@@ -263,7 +263,7 @@ From \acrlong{dqn}, the algorithm incorporates a replay buffer to store the agen
 
 \subsubsection{Twin Delayed Deep Deterministic Policy Gradient (TD3)} \label{sec:td3}
 
-\acrfull{td3} is an extension of \acrshort{ddpg} introduced by Fujimoto et al. (2018) \cite{Fujimoto2018}. The proposal addresses the hyper-parameter sensitivity and overestimation bias present in the critic network of \acrshort{ddpg} by proposing three main main improvements. First, clipped double Q-learning, where the algorithm employs two critic networks and uses their minimum value to compute the target value for the actor network, which reduces the overestimation bias. Second, by introducing delayed policy updates, the actor and critic networks' updates are performed at different frequencies. The critic networks are updated every time step, whereas the actor and target networks are updated less frequently. The main benefit is that it allows the critic to improve the accuracy of the value estimates before the actor updates its policy. Third, to perform target policy smoothing, the algorithm adds noise to the target action during the critic updates to smooth the value function over similar actions, resulting in a lower impact of approximation errors and more robust policies. 
+\acrfull{td3} is an extension of \acrshort{ddpg} introduced by Fujimoto et al. (2018) \cite{Fujimoto2018}. The proposal addresses the hyper-parameter sensitivity and overestimation bias present in the critic network of \acrshort{ddpg} by proposing three main improvements. First, clipped double Q-learning employs two critic networks and uses their minimum value to compute the target value for the actor network, which reduces the overestimation bias. Second, the authors introduce delayed policy updates, where the actor and critic networks' updates are performed at different frequencies; the critic networks are updated every time step, whereas the actor and target networks are updated less frequently. The main benefit is that it allows the critic to improve the accuracy of the value estimates before the actor updates its policy. Third, to perform target policy smoothing, the algorithm adds noise to the target action during the critic updates to smooth the value function over similar actions, resulting in a lower impact of approximation errors and more robust policies.
 
 \subsubsection{Soft Actor-Critic (SAC)} \label{sec:sac}
 
@@ -317,7 +317,7 @@ An alternative method, well-suited for tree-based models, is impurity-based feat
 
 \acrfull{lime} is a model-agnostic explanation method that interprets individual predictions of a \acrlong{ml} model by analysing the model locally around the prediction of interest. The method, introduced by Ribeiro et al. (2016) \cite{Ribeiro2016}, utilises the black box model to understand what happens to the outputs when the input data is slightly modified, then fits a simpler, interpretable model to the perturbed data to approximate its behaviour in that local region.
 
-For a more rigorous definition, let $\mathcal{L}(f,g,\pi_x)$ be a measure of how unfaithful an explanation model $g$ is in approximating the model $f:\mathbb{R}^d \to \mathbb{R}$ in the neighbourhood of the instance $x$ defined as $\pi_x$. The goal is to find an interpretable model $g \in G$, where $G$ is the space of all interpretable models, that minimises the following objective function:
+For a more rigorous definition, let $\mathcal{L}(f,g,\pi_x)$ be a measure of how unfaithful an explanation model $g$ is in approximating the model $f:\mathbb{R}^d \to \mathbb{R}$ in the neighbourhood of the instance $x$ defined as $\pi_x$. The goal is to find an interpretable model $g \in G$, where $G$ is the set of all interpretable models, that minimises the following objective function:
 \begin{equation}
     \xi(x) = \mathcal{L}(f, g, \pi_x) + \Omega(g)
 \end{equation}
@@ -389,7 +389,7 @@ The KernelSHAP algorithm builds on the \acrshort{shap} framework by using a kern
 
 The sample coalitions are generated by randomly selecting subsets of the features, or equivalently, a vector of 0s and 1s indicating whether a feature is included in the coalition. The sampled coalitions represent the dataset for the regression model whose target is the prediction for a coalition. However, the sampled coalitions are not on the target feature space and, as such, it is necessary to implement another function $h_{\mathbf{x}}\left(\mathbf{z}'\right) = \mathbf{z}$ that maps the sampled coalitions to the original feature space. In the case of tabular data, this is done by replacing the features that are not included in the coalition with their mean value or a random sample from its possible values. As a result, sampling from the marginal distribution ignores the dependence structure between features.
 
-Although there are similarities between KernelSHAP and \acrshort{lime}, their main difference lies in feature weighting in the regression model. The \acrshort{shap} weighting assumes that small and large coalitions provide the most information about its isolated effects or its total effects, respectively; whereas coalitions with half the features add little information about a specific feature's contributions \cite{Lundberg2017}. The proposed weighting function for KernelSHAP is:
+Although there are similarities between KernelSHAP and \acrshort{lime}, their main difference lies in feature weighting in the regression model. The \acrshort{shap} weighting assumes that small and large coalitions provide the most information about its isolated effects or its total effects, respectively, whereas coalitions with half the features add little information about a specific feature's contributions \cite{Lundberg2017}. The proposed weighting function for KernelSHAP is:
 \begin{equation}
     \pi_\mathbf{x} (\mathbf{z}') = \frac{(M - 1)}{\binom{M}{|\mathbf{z}'|} |\mathbf{z}'| \left(M - |\mathbf{z}'|\right)},
 \end{equation}
