--- a/report/contents/results.tex
+++ b/report/contents/results.tex
@@ -201,7 +201,7 @@ The \texttt{shap} Python library provides numerous visualisations to explain the
     \label{fig:a2c_shap_forceplot_aapl}
 \end{figure}
 
-The library provides the output in \acrfull{html} format that allows interaction with the visualisation and to gain deeper insights into the model's behaviour. Using the force plot, it is possible to single out the effects of AAPL's most important feature over the test period, as shown in Figure \ref{fig:a2c_shap_forceplot_aapl_lowmsft}. Its impact is very well-defined. For approximately the first 30 time steps, it has a positive contribution, increasing AAPL's allocation, while for the remainder of the test period, it has mostly a negative contribution, decreasing the asset weight.
+The library provides the output in \acrfull{html} format that allows interaction with the visualisation and to gain deeper insights into the model's behaviour. Using the force plot in Figure \ref{fig:a2c_shap_forceplot_aapl_lowmsft}, it is possible to single out the effects of AAPL's most important feature, the low price of MSFT, over the test period. Its impact is very well-defined. For approximately the first 30 time steps, it has a positive contribution, increasing AAPL's allocation, while for the remainder of the test period, it has mostly a negative contribution, decreasing the asset weight.
 
 \begin{figure}
     \centering
