--- a/report/tables/hyperparameter_tuning.tex
+++ b/report/tables/hyperparameter_tuning.tex
@@ -38,5 +38,5 @@
     & Buffer size & \{100000, 500000, 1000000, 2000000\} \\ 
     & Learning rate & Uniform[1$\times$10$^{-5}$, 1$\times$10$^{-2}$] \\ 
     & Learning starts & \{500, 1000, 2000, 5000\} \\ 
-    & Entropy coefficient & \{"auto", "auto\_0.1", "auto\_0.01"\} \\ \hline
+    & Entropy coefficient & \{auto, auto\_0.1, auto\_0.01\} \\ \hline
 \end{longtable}
