Fix table captions

--- a/report/tables/experiment_algorithms_dow30.tex
+++ b/report/tables/experiment_algorithms_dow30.tex
@@ -1,5 +1,5 @@
 \begin{longtable}{|p{2cm}|p{2.1cm}|p{2.1cm}|p{2.1cm}|p{1.5cm}|p{2cm}|}
-    \caption{Algorithm comparison results for the DowJones30 dataset. The colours correspond to the best performing configurations, with blue for the best performing \acrshort{drl} algorithm and green for the best benchmark.}
+    \caption{Algorithm comparison results for the DowJones30 dataset with prices and indicators feature set. The colours correspond to the best performing configurations, with blue for the best performing \acrshort{drl} algorithm and green for the best benchmark.}
     \label{tab:experiment_algorithms_dow30} 
     \\ 
     \hline
