--- a/report/tables/experiment_algorithms_ppo.tex
+++ b/report/tables/experiment_algorithms_ppo.tex
@@ -1,5 +1,5 @@
 \begin{longtable}{|l|p{2.1cm}|p{2.1cm}|p{2.1cm}|p{1.5cm}|p{2cm}|}
-    \caption{Algorithm comparison results for the PPO implementation.}
+    \caption{Algorithm comparison results for the PPO implementation across the different datasets under the indicators feature set.}
     \label{tab:experiment_algorithms_ppo}
     \\ 
     \hline
