Update results conclusions

--- a/report/contents/results.tex
+++ b/report/contents/results.tex
@@ -90,15 +90,13 @@ In this section, the results of the experiment to identify the suitability of th
 
 \input{tables/experiment_algorithms_a2c.tex}
 
-For the case of \acrshort{a2c}, the algorithm demonstrates competitive performance particularly for the DowJones30 dataset, achieving a cumulative return of 21.65\% and a Sharpe ratio of 1.32. Positive results are also obtained with the commodities dataset, which demonstrates the highest cumulative return of 23.53\% and a Sharpe ratio of 1.14. Despite being of the same asset class, the EuroStoxx50 and the FTSE100 datasets show relatively lower performance, with cumulative returns of 14.67\% and 10.52\%, respectively, most likely due to the higher number of assets. With regard to the currencies dataset, the performance of the algorithm is less impressive, with near-zero cumulative returns and Sharpe ratios, indicating that the algorithm struggles to learn a profitable strategy in this asset class.
+For the case of \acrshort{a2c}, the algorithm demonstrates competitive performance particularly for the DowJones30 dataset, achieving a cumulative return of 34.91\% and a Sharpe ratio of 1.43. Positive results are also obtained with the commodities dataset, which demonstrates the highest cumulative return of 36.94\% and a Sharpe ratio of 1.14. Despite being of the same asset class, the EuroStoxx50 and the FTSE100 datasets show relatively lower performance, with cumulative returns of 22.93\% and 16.23\%, respectively, most likely due to the higher number of assets. With regard to the currencies dataset, the performance of the algorithms is less impressive, with near-zero cumulative returns and Sharpe ratios, indicating that the algorithm struggles to learn a profitable strategy in this asset class. 
 
-Although similar observations can be made for the other algorithms, the performance varies significantly across different datasets, as outlined in Appendix \ref{app:experiment_algorithms_comparison}. Regarding \acrshort{ppo}, better performance is achieved in the commodities dataset, with a cumulative return of 25.31\% and a Sharpe ratio of 1.26. which is slightly more than 0.1 higher than that of the \acrshort{a2c} algorithm. \acrshort{ddpg} performs the best in the DowJones30 dataset, achieving similar performance to that of \acrshort{a2c}, with a 22.06\% cumulative return and a Sharpe ratio of 1.38. However, \acrshort{td3} surpasses all other algorithms for the DowJones30 dataset and the Commodities datasets, achieving 24.78\% and 27.68\% in cumulative return, respectively. Finally, \acrshort{sac} demonstrates a strong performance in the EuroStoxx50 dataset, with a cumulative return of 17.61\% and a Sharpe ratio of 1.14, but it does not outperform the other algorithms in the DowJones30 and Commodities datasets. The algorithm that performs better in the FTSE100 dataset is \acrshort{ddpg}, with a cumulative return of 13.36\% and a Sharpe ratio of 1.08.
-
-%% ALL IN ALL PARAGRAPH - GENERAL CONCLUSION
+Although similar observations can be made for the other algorithms, the performance varies significantly across different datasets, as outlined in the tables in Appendix \ref{app:experiment_algorithms_comparison}. Regarding \acrshort{ppo}, better performance is achieved in the commodities dataset, with a cumulative return of 39.9\% and a Sharpe ratio of 1.26. which is slightly more than 0.1 higher than that of the \acrshort{a2c} algorithm. \acrshort{ddpg} performs the best in the DowJones30 dataset, achieving similar performance to that of \acrshort{a2c}, with a 34.54\% cumulative return and a Sharpe ratio of 1.38. However, \acrshort{td3} surpasses all other algorithms for the DowJones30 dataset and the Commodities datasets, achieving 38.02\% and 43.86\% in terms of cumulative return, respectively. Finally, \acrshort{sac} demonstrates a strong performance in the EuroStoxx50 dataset, with a cumulative return of 27.71\% and a Sharpe ratio of 1.14, but it does not outperform the other algorithms in the DowJones30 and Commodities datasets. The algorithm that performs better in the FTSE100 dataset is \acrshort{ddpg}, with a cumulative return of 20.76\% and a Sharpe ratio of 1.08. In terms of the currencies dataset, the performance in the other algorithms does not differ significantly from that of \acrshort{a2c}, with cumulative returns close to zero and Sharpe ratios below 0.1. A possible reason for this is a non-optimal hyper-parameter configuration was used followed by the significant changes in the market conditions from one time step to the next.
 
 Taking the DowJones30 dataset with an environment representation made up of the \acrshort{ohlcv} prices and the indicators, the performance of the algorithms can be benchmarked against traditional strategies and the \acrshort{djia} Index. The evolution of the cumulative returns over the testing period is shown in Figure \ref{fig:dowjones30_indicators_cumulative_returns} and the corresponding performance metrics are summarised in Table \ref{tab:experiment_algorithms_dow30}.
 
-\begin{figure}[h]
+\begin{figure}
     \centering
     \includegraphics[width=\textwidth]{figures/dowjones30_indicators_cumulative_returns.png}
     \caption{Evolution of the Cumulative Returns for the DowJones30 dataset with the \acrshort{ohlcv} prices and indicators environment representation.}
@@ -109,7 +107,7 @@ Taking the DowJones30 dataset with an environment representation made up of the 
 
 The results show that all the algorithms outperform the index for all the considered metrics, as well as the min-variance portfolio. Out of all the \acrshort{drl} algorithms, \acrshort{ddpg} achieves the highest cumulative return of 23.41\% and a Sharpe ratio of 1.49, followed by \acrshort{td3} with a cumulative return of 22.14\% and a Sharpe ratio of 1.39, while \acrshort{ppo} has the worst performance of the five with a cumulative return of 18.95\% and a Sharpe ratio of 1.24. However, none of these outperform the mean-variance and momentum benchmark strategies, with the latter achieving a Sharpe ratio of 1.74 and a cumulative return of 38.55\%, which is significantly higher than the performance of the \acrshort{drl} algorithms. 
 
-%% ALL IN ALL GENERIC RESULTS
+All in all, the results show that the performance of the algorithms varies significantly across different datasets. However, \acrshort{ddpg} seems to consistently perform well across the board. This can be attributed to its ability to maximise returns. \acrshort{a2c} also performs well, particularly in the DowJones30 dataset, as it is capable of balancing risk and returns, showing 1\% less volatility than \acrshort{ddpg}. 
 
 \subsection{Environment Representation} \label{sec:environment-representation}
 
@@ -117,11 +115,13 @@ Another source of variability in the performance of the algorithms is the enviro
 
 \input{tables/experiment_environment_sharperatio.tex}
 
-The results show that the performance of the algorithms varies significantly across different environment representations. For the DowJones30 dataset, the \acrshort{ohlcv} prices representation achieves the highest Sharpe ratio of 1.49 for \acrshort{td3}, closely followed by the \acrshort{ohlcv} prices with indicators. The \acrshort{ohlcv} prices with covariance representation achieves 1.47 for \acrshort{sac}. For the complete feature set, only the \acrshort{a2c} algorithm achieves a higher Sharpe ratio of 1.39 than the other algorithms.
+The results show that the performance of the algorithms varies significantly across different environment representations. For the DowJones30 dataset, the \acrshort{ohlcv} prices with indicators representation achieves the highest Sharpe ratio of 1.56 for \acrshort{ddpg}, closely followed by the \acrshort{ohlcv} prices for the \acrshort{td3} algorithm. The \acrshort{ohlcv} prices with covariance representation achieves 1.47 for \acrshort{sac}. For the complete feature set, no algorithm achives a higher Sharpe ratio than in any of the other environment representations, with \acrshort{ddpg} achieving 1.36, which is lower than the Sharpe ratio of 1.56 achieved with the \acrshort{ohlcv} prices with indicators representation.
 
-For the commodities dataset, the results are completely different to those of the DowJones30. The only coincidence is that \acrshort{td3} achieves the highest Sharpe ratio and highest cumulative return in the simple feature set. Moreover, when looking at this dataset, explicitly adding the covariance to the environment representation does not lead to better performance in terms of Sharpe ratio.
+For the commodities dataset, the results are completely different to those of the DowJones30. \acrshort{td3} achieves the highest Sharpe ratio and highest cumulative return in the simple feature set. Moreover, when looking at this dataset, explicitly adding the covariance to the environment representation does not lead to better performance in terms of Sharpe ratio. However, in terms of cumulative return, it is \acrshort{ddpg} in conjunction with the complete feature representation that achieves the highest cumulative return of 42.11\%. 
 
-Finally, for the currencies dataset, the performance of the algorithms is significantly lower, going negative in some cases. A possible reason is the particular set of hyper-parameters used. 
+Finally, for the currencies dataset, the performance of the algorithms is significantly lower than in the other two datasets. The highest Sharpe ratio achieved is 0.18 with \acrshort{sac} in conjunction with the complete feature set, while the cumulative returns are close to zero for all algorithms and environment representations. This suggests that the algorithms struggle to learn a profitable strategy in this asset class, possibly due to the high volatility and low liquidity of the currency market.
+
+All in all, since there is only one instance out of the 36 combinations where adding more features led to an increase in performance, it is clear that explicitly incorporating the covariance matrix does not lead to neither a higher Sharpe ratio nor cumulative return. Thus, it is clear that the addition of the covariance matrix does not provide any added value to the environment representation, only adds more dimensionality and computational complexity, since the algorithms are all capable of learning the relationships between the assets from the \acrshort{ohlcv} prices. However, adding indicators to the environment representation does lead to an increase in performance.
 
 \subsection{Hyper-parameter Tuning} \label{sec:hyper-parameter-tuning}
 
@@ -210,7 +210,7 @@ The library provides the output in \acrfull{html} format that allows interaction
     \label{fig:a2c_shap_forceplot_aapl_lowmsft}
 \end{figure}
 
-Lundberg and Lee (2017) \cite{Lundberg2017} showed that \acrshort{lime} is a subset of \acrshort{shap} and, as a consequence, it is possible to obtain local explanations using the \texttt{shap} library. Figure \ref{fig:a2c_shap_forceplot_singleobs_aapl} shows the local explanation for the AAPL asset at a single observation of the test dataset. Although the visualisation is different, the information it provides is similar to that of \acrshort{lime}. Shown horizontally, the features in magenta push the allocation higher, while those in blue push it lower. In this case, the most important features that contribute to the allocation weight of AAPL are only features that increase the allocation and, as such, no blue features are present.
+Lundberg and Lee (2017) \cite{Lundberg2017} showed that \acrshort{lime} is a subset of \acrshort{shap} and, as a consequence, it is possible to obtain local explanations using the \texttt{shap} library. Figure \ref{fig:a2c_shap_forceplot_singleobs_aapl} shows the local explanation for the AAPL asset at a single observation of the test dataset. Although the visualisation is different, the information it provides is similar to that of \acrshort{lime}. Shown horizontally, the features in magenta push the allocation higher, while those in blue push it lower. In this case, the most important features that contribute to the allocation weight of AAPL are only features that increase the allocation and, as such, no blue features are present. The local explanations for the other assets at a single observation can be found in Appendix \ref{app:shap_explanations}.
 
 \begin{figure}
     \centering
