--- a/report/contents/results.tex
+++ b/report/contents/results.tex
@@ -90,7 +90,7 @@ In this section, the results of the experiment to identify the suitability of th
 
 \input{tables/experiment_algorithms_a2c.tex}
 
-For the case of \acrshort{a2c}, the algorithm demonstrates competitive performance particularly for the DowJones30 dataset, achieving a cumulative return of 34.91\% and a Sharpe ratio of 1.43. Positive results are also obtained with the commodities dataset, which demonstrates the highest cumulative return of 36.94\% and a Sharpe ratio of 1.14. Despite being of the same asset class, the EuroStoxx50 and the FTSE100 datasets show relatively lower performance, with cumulative returns of 22.93\% and 16.23\%, respectively, most likely due to the higher number of assets. With regard to the currencies dataset, the performance of the algorithms is less impressive, with near-zero cumulative returns and Sharpe ratios, indicating that the algorithm struggles to learn a profitable strategy in this asset class. 
+For the case of \acrshort{a2c}, the algorithm demonstrates competitive performance particularly for the DowJones30 dataset, achieving a cumulative return of 34.91\% and a Sharpe ratio of 1.43. Positive results are also obtained with the commodities dataset, which demonstrates the highest cumulative return of 36.94\% and a Sharpe ratio of 1.14. Despite being of the same asset class, the EuroStoxx50 and the FTSE100 datasets show relatively lower performance, with cumulative returns of 22.93\% and 16.23\%, respectively, most likely due to the higher number of assets. With regard to the currencies dataset, the performance of the algorithm is less impressive, with near-zero cumulative returns and Sharpe ratios, indicating that the algorithm struggles to learn a profitable strategy in this asset class. 
 
 Although similar observations can be made for the other algorithms, the performance varies significantly across different datasets, as outlined in the tables in Appendix \ref{app:experiment_algorithms_comparison}. Regarding \acrshort{ppo}, better performance is achieved in the commodities dataset, with a cumulative return of 39.9\% and a Sharpe ratio of 1.26. which is slightly more than 0.1 higher than that of the \acrshort{a2c} algorithm. \acrshort{ddpg} performs the best in the DowJones30 dataset, achieving similar performance to that of \acrshort{a2c}, with a 34.54\% cumulative return and a Sharpe ratio of 1.38. However, \acrshort{td3} surpasses all other algorithms for the DowJones30 dataset and the Commodities datasets, achieving 38.02\% and 43.86\% in terms of cumulative return, respectively. Finally, \acrshort{sac} demonstrates a strong performance in the EuroStoxx50 dataset, with a cumulative return of 27.71\% and a Sharpe ratio of 1.14, but it does not outperform the other algorithms in the DowJones30 and Commodities datasets. The algorithm that performs better in the FTSE100 dataset is \acrshort{ddpg}, with a cumulative return of 20.76\% and a Sharpe ratio of 1.08. In terms of the currencies dataset, the performance in the other algorithms does not differ significantly from that of \acrshort{a2c}, with cumulative returns close to zero and Sharpe ratios below 0.1. A possible reason for this is a non-optimal hyper-parameter configuration was used followed by the significant changes in the market conditions from one time step to the next.
 
@@ -107,7 +107,7 @@ Taking the DowJones30 dataset with an environment representation made up of the 
 
 The results show that all the algorithms outperform the index for all the considered metrics, as well as the min-variance portfolio. Out of all the \acrshort{drl} algorithms, \acrshort{ddpg} achieves the highest cumulative return of 23.41\% and a Sharpe ratio of 1.49, followed by \acrshort{td3} with a cumulative return of 22.14\% and a Sharpe ratio of 1.39, while \acrshort{ppo} has the worst performance of the five with a cumulative return of 18.95\% and a Sharpe ratio of 1.24. However, none of these outperform the mean-variance and momentum benchmark strategies, with the latter achieving a Sharpe ratio of 1.74 and a cumulative return of 38.55\%, which is significantly higher than the performance of the \acrshort{drl} algorithms. 
 
-All in all, the results show that the performance of the algorithms varies significantly across different datasets. However, \acrshort{ddpg} seems to consistently perform well across the board. This can be attributed to its ability to maximise returns. \acrshort{a2c} also performs well, particularly in the DowJones30 dataset, as it is capable of balancing risk and returns, showing 1\% less volatility than \acrshort{ddpg}. 
+All in all, the results show that the performance of the algorithms varies significantly across different datasets. However, \acrshort{ddpg} seems to consistently perform well across the experiments. This can be attributed to its ability to maximise returns. \acrshort{a2c} also performs well, particularly in the DowJones30 dataset, as it is capable of balancing risk and returns, showing 1\% less volatility than \acrshort{ddpg}. 
 
 \subsection{Environment Representation} \label{sec:environment-representation}
 
@@ -115,13 +115,13 @@ Another source of variability in the performance of the algorithms is the enviro
 
 \input{tables/experiment_environment_sharperatio.tex}
 
-The results show that the performance of the algorithms varies significantly across different environment representations. For the DowJones30 dataset, the \acrshort{ohlcv} prices with indicators representation achieves the highest Sharpe ratio of 1.56 for \acrshort{ddpg}, closely followed by the \acrshort{ohlcv} prices for the \acrshort{td3} algorithm. The \acrshort{ohlcv} prices with covariance representation achieves 1.47 for \acrshort{sac}. For the complete feature set, no algorithm achives a higher Sharpe ratio than in any of the other environment representations, with \acrshort{ddpg} achieving 1.36, which is lower than the Sharpe ratio of 1.56 achieved with the \acrshort{ohlcv} prices with indicators representation.
+The results show that the performance of the algorithms varies significantly across different environment representations. For the DowJones30 dataset, the \acrshort{ohlcv} prices with indicators representation achieves the highest Sharpe ratio of 1.56 for \acrshort{ddpg}, closely followed by the \acrshort{ohlcv} prices for the \acrshort{td3} algorithm. The \acrshort{ohlcv} prices with covariance representation achieves 1.47 for \acrshort{sac}. For the complete feature set, no algorithm achieves a higher Sharpe ratio than in any of the other environment representations, with \acrshort{ddpg} achieving the highest value of 1.36, which is lower than the Sharpe ratio of 1.56 it achieved with the \acrshort{ohlcv} prices with indicators representation.
 
 For the commodities dataset, the results are completely different to those of the DowJones30. \acrshort{td3} achieves the highest Sharpe ratio and highest cumulative return in the simple feature set. Moreover, when looking at this dataset, explicitly adding the covariance to the environment representation does not lead to better performance in terms of Sharpe ratio. However, in terms of cumulative return, it is \acrshort{ddpg} in conjunction with the complete feature representation that achieves the highest cumulative return of 42.11\%. 
 
 Finally, for the currencies dataset, the performance of the algorithms is significantly lower than in the other two datasets. The highest Sharpe ratio achieved is 0.18 with \acrshort{sac} in conjunction with the complete feature set, while the cumulative returns are close to zero for all algorithms and environment representations. This suggests that the algorithms struggle to learn a profitable strategy in this asset class, possibly due to the high volatility and low liquidity of the currency market.
 
-All in all, since there is only one instance out of the 36 combinations where adding more features led to an increase in performance, it is clear that explicitly incorporating the covariance matrix does not lead to neither a higher Sharpe ratio nor cumulative return. Thus, it is clear that the addition of the covariance matrix does not provide any added value to the environment representation, only adds more dimensionality and computational complexity, since the algorithms are all capable of learning the relationships between the assets from the \acrshort{ohlcv} prices. However, adding indicators to the environment representation does lead to an increase in performance.
+Overall, since there is only one instance out of the 36 combinations where adding more features led to an increase in performance, it is clear that explicitly incorporating the covariance matrix neither leads to a higher Sharpe ratio nor cumulative return. This implies that no value is added to the environment representation, rather only more dimensions and computational complexity. Indeed the information in the covariance matrix may be redundant as the algorithms are likely all capable of learning the relationships between the assets from the \acrshort{ohlcv} prices. However, adding indicators to the environment representation does lead to an increase in performance. While the models could theoretically learn to compute these indicators from first principles, including them directly as part of the environment representation avoids this extra step and confirms their analytical strength.
 
 \subsection{Hyper-parameter Tuning} \label{sec:hyper-parameter-tuning}
 
@@ -170,7 +170,7 @@ The \acrshort{lime} method provides local explanations for individual prediction
     \item a coloured list outlining the feature values, corresponding to positive (orange) or negative (blue) contribution.
 \end{itemize}
 
-Figure \ref{fig:a2c_lime_msft} presents the \acrshort{lime} explanation for the MSFT asset on a selected trading day from the test dataset, while the other assets are found in Appendix \ref{app:lime_explanations}. In this instance, the low price of V contributes positively to the MSFT allocation, while the high price of CSCO and the open price of V negatively affect the prediction by pushing it lower. Examining such local explanations across multiple time steps can help identify features that consistently impact portfolio allocation decisions.
+Figure \ref{fig:a2c_lime_msft} presents the \acrshort{lime} explanation for the MSFT asset on a selected trading day from the test dataset, while the other assets are found in Appendix \ref{app:lime_explanations}. In this instance, the low price of V contributes positively to the MSFT allocation, while the high price of CSCO and the open price of V negatively affect the prediction by pushing the allocation lower. Examining such local explanations across multiple time steps can help identify features that consistently impact portfolio allocation decisions.
 
 \begin{figure}
     \centering
