--- a/report/contents/results.tex
+++ b/report/contents/results.tex
@@ -15,7 +15,7 @@ The constituents of each of the indexes were retrieved in April 2025 and can be 
 
 Additionally, two datasets were constructed using commodities and currencies, respectively. The commodities dataset includes six different commodities, which are listed in Appendix \ref{sec:datasets-commodities}. These are a sample of the most traded commodities in the market and were chosen by their availability in the \texttt{Yahoo! Finance API} \footnote{https://uk.finance.yahoo.com}. With regard to the currencies dataset, it includes ten different currency pairs, listed in Appendix \ref{sec:datasets-currencies}. These were selected based on their trading volume and liquidity, with all pairs quoted in \acrfull{usd}.
 
-The datasets are constructed using daily data from January 2016 to July 2025 downloaded using the Python \texttt{yfinance} library \cite{yfinance}. The dataset is partitioned into two disjoint sets: training and testing, with the training set containing data from January 2016 to December 2023, and the testing set starting on January 2024 until July 2025. For hyper-parameter tuning, the training set is further split into a training and validation set, with the validation sets corresponding to the period between January 2023 and December 2023. 
+The datasets are constructed using daily data from January 2016 to July 2025 downloaded using the Python \texttt{yfinance} library \cite{yfinance}. The dataset is partitioned into two disjoint sets: training and testing, with the training set containing data from January 2016 to December 2023, and the testing set starting on January 2024 until July 2025. For hyper-parameter tuning, the training set is further split into a training and validation sets, with the validation set corresponding to the period between January 2023 and December 2023. 
 
 \section{Experiment Design} \label{sec:experiment-design}
 
