--- a/report/tables/experiment_algorithms_ddpg.tex
+++ b/report/tables/experiment_algorithms_ddpg.tex
@@ -7,7 +7,7 @@
     \endfirsthead
 
     \hline
-    \textbf{Dataset} & \textbf{Annualised return} & \textbf{C return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
+    \textbf{Dataset} & \textbf{Annualised return} & \textbf{Cumulative return} & \textbf{Annualised volatility} & \textbf{Sharpe ratio} & \textbf{Max drawdown}  \\ \midrule
     \endhead
 
     \endfoot
